--- a/index.html
+++ b/index.html
@@ -62,29 +62,31 @@
                     <div class="radio">
                         <label for="radios-0">
                             <input type="radio" name="radios" id="radios-0" value="1">
-                                <span id="answer1">answer1</span>
+                                <span id="choice1">choice1</span>
                         </label>
                     </div>
                     <div class="radio">
                         <label for="radios-1">
                             <input type="radio" name="radios" id="radios-1" value="2">
-                            <span id="answer2">answer2</span>
+                            <span id="choice2">choice2</span>
                         </label>
                     </div>
                     <div class="radio">
                         <label for="radios-2">
                         <input type="radio" name="radios" id="radios-2" value="3">
-                            <span id="answer3"></span>
+                            <span id="choice3">choice3</span>
                         </label>
                     </div>
                     <div class="radio">
                         <label for="radios-3">
                         <input type="radio" name="radios" id="radios-3" value="4">
-                            <span id="answer4"></span>
+                            <span id="choice4">choice4</span>
                         </label>
                     </div>
                     <hr />
                     <button type="button" class="btn btn-default" id="submitAnswer">Submit answer</button>
+                    <button type="button" class="btn btn-default" id="nextQuestion">Next question</button>
+                    <button type="button" class="btn btn-default" id="restartQuiz">Restart Quiz?</button>
                 </div>
             </div>
         </div>
@@ -96,10 +98,10 @@
         <div class="modal-content">
             <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-            <h2 class="modal-title" id="myModalLabel">Classic computer + video gaming quiz!</h2>
+            <h2 class="modal-title" id="myModalLabel">Classic gaming quiz!</h2>
             </div>
             <div class="modal-body">
-                <p>Are you a true gamer? Test your knowledge of classic computer and video gaming with this quiz! Channel your inner PacMan because we have five awesome questions for you to test your knowledge with. Get it on like Donkey Kong!</p>
+                <p>Are you a true gamer? Test your knowledge of classic computer and video gaming with this quiz! Prepare to channel your inner PacMan because we have five awesome questions for you to test your knowledge with. Get it on like Donkey Kong!</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
