update ready for testing
for submission and acceptance testing

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     <hr />
                     <button type="button" class="btn btn-default" id="submitAnswer">Submit answer</button>
                     <button type="button" class="btn btn-default" id="nextQuestion">Next question</button>
+                    <button type="button" class="btn btn-default" id="showScore">Show my score!</button>
                     <button type="button" class="btn btn-default" id="restartQuiz">Restart Quiz?</button>
                 </div>
             </div>
